add a several header tag

--- a/code/index.html
+++ b/code/index.html
@@ -8,5 +8,17 @@
 <body>
     <h1>I LOVE MY COUNTRY</h1>
     <h2>i also love my parents</h2>
+    <h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2><h1>I LOVE MY COUNTRY</h1>
+    <h2>i also love my parents</h2>
 </body>
 </html>
